@@ -1,0 +1,3 @@
+Mostly finish using ttk widgets, mainly for editor, settings,
+and searches.  Some patches by Mark Roseman.
+
